--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./options.json:/root/options.json
+      - ./options.json:/app/options.json
     environment:
-      - CONFIG_FILE=/root/options.json
+      - CONFIG_FILE=/app/options.json
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--output-document=/dev/null", "http://localhost:8080"]
